<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about_page_background">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/textToBeDrawn"
        android:maxLength="30"
        android:id="@+id/textToDraw"
        android:gravity="center"
        android:layout_marginBottom="44dp"
        android:layout_above="@+id/sendTextToDrawButton"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/okButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sendTextToDrawButton"
        android:onClick="sendTextToDraw"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>