<resources>
    <string name="app_name">SpotOn</string>
    <string name="wayToConnect">Choose a way to log in:</string>
    <string name="restrictions">You won\'t be able to send pictures by not logging in</string>
    <string name="facebook_app_id">348409365495965</string>
    <string name="log_out">Log Out</string>
    <string name="about_menu">About</string>
    <string name="tab_aroundme">Around me</string>
    <string name="tab_camera">Camera</string>
    <string name="tab_map">Map</string>
    <string name="captureButton">Capture</string>
    <string name="pictureTaken">Picture Taken</string>
    <string name="gps_not_permitted">The app is unable to work without this permission</string>
    <string name="sendButton">Send the photo to the server</string>
    <string name="storeButton">Save the photo to your gallery</string>
    <string name="addTextButton">Add text to the picture</string>
    <string name="rotateButton">Rotate the picture</string>
    <string name="editButton">Edit the picture</string>
    <string name="confirmButton">Confirm the changes</string>
    <string name="about_text">
        This amazing application is the fruit of the hard work of an ambitious team. What started as a simple Software Engineering project became so much more !
        \nTeam Qwertz is composed of Alexis, Marie-Laure, Olivier, Quentin, Nicolas and Bruno.
    </string>

    <string name="userProfileTitle">Hello</string>
    <string name="userProfileKarma">Your karma:</string>
    <string name="userFollowingPictures">Here are your pictures that are still online:</string>
    <string name="profilePictureListText">Votes:</string>
    <string name="userProfileListPictureDeleteButton">Delete</string>

    <string name="fullSizeImage">Thumbnail in full size</string>

    <string name="noPictureViewable">There is maybe some picture around, look at the map! :)</string>
    <string name="goToMap">Go to the Map</string>
    <string name="okButton">OK !</string>
    <string name="textToBeDrawn"> Text to be drawn</string>
    <string name="upVoteOrderButton">Upvote</string>
    <string name="newestOrderButton">Newest</string>
    <string name="oldestOrderButton">Oldest</string>
    <string name="hotOrderButton">Hot</string>
    <string name="dontLogInButton"> I don\'t want to log in </string>

    <string name="contentDescriptionUserPictureImage">UserPicture</string>
    <string name="contentDescriptionPictureThumbnailImage">PictureThumbnail</string>
    <string name="contentDescriptionDownVoteImageButton">DownVoteButton</string>
    <string name="contentDescriptionUpVoteImageButton">UpVoteButton</string>
    <string name="contentDescriptionLoginTextView">LoginTextView</string>
    <string name="profile_menu">Profile</string>
    <string name="log_out_question">Do you want to log out ?</string>
    <string name="cancel">Cancel</string>
    <string name="report_question">Do you want to report this picture ?\n You won\'t be able to see it again.</string>
    <string name="report">Report</string>
    <string name="delete_picture_question">Do you want to delete this picture ?</string>
    <string name="delete_picture_button">Clicking this button will remove the picture from the server</string>
    <string name="thumbnail_on_marker">The image displayed above a marker when clicking on it</string>

</resources>

