<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_picture"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.epfl.sweng.spotOn.gui.TakePictureFragment"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:contentDescription="@string/pictureTaken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_view"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        tools:ignore="ContentDescription"
        android:adjustViewBounds="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/storeButton"
        android:contentDescription="@string/storeButton"
        android:onClick="storePictureOnInternalStorage"
        android:src="@drawable/ic_store_30dp"
        android:background="@drawable/button_shape_take_picture"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/sendButton"
        android:contentDescription="@string/sendButton"
        android:onClick="sendPictureToServer"
        android:src="@drawable/ic_send_30dp"
        android:background="@drawable/button_shape_take_picture"
        android:layout_alignBaseline="@+id/storeButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />


    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/captureButton"
        android:contentDescription="@string/captureButton"
        android:onClick="dispatchTakePictureIntent"
        android:src="@drawable/ic_camera_30dp"
        android:background="@drawable/button_shape_take_picture"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/editButton"
        android:contentDescription="@string/editButton"
        android:onClick="editPicture"
        android:src="@drawable/ic_add_30dp"
        android:background="@drawable/button_shape_take_picture"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>