<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/empty_grid_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical"
        android:weightSum="8">


        <TextView
            android:text="@string/noPictureViewable"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/empty_grid_textView" />

        <ImageView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:src="@mipmap/image_no_close_picture"
            android:adjustViewBounds="false"
            tools:ignore="ContentDescription"
            android:layout_weight="5"
            android:baselineAlignBottom="false" />

        <Button
            android:text="@string/goToMap"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/empty_grid_button"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onEmptyGridButtonClick" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/grid_layout"
        android:visibility="visible">

        <GridView
            android:id="@+id/gridview"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="3"
            android:verticalSpacing="0dp"
            android:horizontalSpacing="0dp"
            android:stretchMode="columnWidth"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="16dp"
            android:onClick="onExtendOrderList"
            android:id="@+id/extend_list_button"
            android:src="@drawable/ic_format_list_numbered_black_32dp"
            android:background="@drawable/button_extend_list_order"
            tools:ignore="ContentDescription" />


        <RelativeLayout
            android:id="@+id/extended_list"
            android:visibility="gone"
            android:layout_height="300dp"
            android:layout_width="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="80dp">
            <Button
                android:text="@string/upVoteOrderButton"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_sorting_grid"
                android:id="@+id/order_upvote_button"
                android:onClick="onUpVoteOrderingClick"/>

            <Button
                android:text="@string/oldestOrderButton"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="40dp"
                android:layout_alignBottom="@id/order_upvote_button"
                android:background="@drawable/button_sorting_grid"
                android:id="@+id/order_oldest_button"
                android:onClick="onOldestOrderingClick"/>

            <Button
                android:text="@string/newestOrderButton"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="40dp"
                android:layout_alignBottom="@id/order_oldest_button"
                android:background="@drawable/button_sorting_grid"
                android:id="@+id/order_newest_button"
                android:onClick="onNewestOrderingClick"/>
            <Button
                android:text="@string/hotOrderButton"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="40dp"
                android:layout_alignBottom="@id/order_newest_button"
                android:background="@drawable/button_sorting_grid"
                android:id="@+id/order_hottest_button"
                android:onClick="onHottestOrderingClick"/>

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>