<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_picture_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.epfl.sweng.spotOn.gui.ViewFullSizeImageActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
    </android.support.v4.view.ViewPager>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/UpvoteTextView"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="16dp"
        android:onClick="recordDownvote"
        android:id="@+id/downvoteButton"
        android:src="@drawable/ic_thumb_down_30dp"
        android:background="@drawable/button_shape_downvote"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/contentDescriptionDownVoteImageButton"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:onClick="recordUpvote"
        android:id="@+id/upvoteButton"
        android:src="@drawable/ic_thumb_up_30dp"
        android:background="@drawable/button_shape_upvote"
        android:layout_alignTop="@+id/downvoteButton"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/contentDescriptionUpVoteImageButton"/>

    <Button
        android:text="@string/report"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="reportOffensivePicture"
        android:background="@drawable/button_shape_report"
        android:id="@+id/reportButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_toStartOf="@+id/upvoteButton"
        android:layout_toEndOf="@+id/downvoteButton"/>


</RelativeLayout>
